syntax = "proto2";

import "metrics.proto";

package rome;

message WorkloadDriverProto {
  optional metrics.MetricProto ops = 2;
  optional metrics.MetricProto runtime = 3;
  optional metrics.MetricProto qps = 4;
  optional metrics.MetricProto latency = 5;
};